zishao-v410-deploy-uodate-0523

--- a/en-US/2.quickstart/1.quickly-experience-oceanbase-for-community.md
+++ b/en-US/2.quickstart/1.quickly-experience-oceanbase-for-community.md
@@ -3,10 +3,10 @@
 This topic describes how to deploy OceanBase Database in a demo environment, a cluster, or a container for quick hands-on experience.
 
 <main id="notice" type='notice'>
-  <h4>Notice</h4>
+  <h4>Note</h4>
   <ul>
   <li>
-  <p>You can refer to this topic only for quick hands-on experience of OceanBase Database but not for production purposes. To deploy OceanBase Database in a production environment, see <a href="../4.deploy/1.deploy-overview.md">Deploy</a> in OceanBase Database Documentation. </p>
+  <p>You can refer to this topic only for quick hands-on experience of OceanBase Database but not for production purposes. To deploy OceanBase Database in a production environment, see <a href="../4.deploy/1.deploy-overview.md">Deployment overview</a> in the OceanBase Database Documentation. </p>
   </li>
   <li>
   <p>Deployment in a demo environment or a cluster applies to both OceanBase Database Enterprise Edition and OceanBase Database Community Edition. Deployment in a container applies only to the community edition.<b></b><b></b><b></b> </p>
@@ -24,15 +24,15 @@ Three deployment solutions are provided for you to quickly get started with Ocea
 
 * Solution 1: Deploy OceanBase Database in a demo environment
 
-   If you have only one server, you can quickly build a demo environment to deploy OceanBase Database. The demo database provides basic features for you to quickly learn about OceanBase Database, but does not support distributed capabilities or high availability. Therefore, long-term use is not recommended. For more information, see **Solution 1: Deploy OceanBase Database in a demo environment**.
+   If you have only one server, you can quickly build a demo environment to deploy OceanBase Database. The demo database provides basic features for you to quickly learn about OceanBase Database, but does not support distributed capabilities or high availability. Therefore, long-term use is not recommended. For more information, see the **Solution 1: Deploy OceanBase Database in a demo environment** section blow.
 
 * Solution 2: Deploy OceanBase Database in a cluster
 
-   You can choose this solution if you want to learn more about the distributed architecture and features of OceanBase Database. The cluster provides distributed capabilities and high availability apart from complete database features. To use this solution, you must have three hosts, each of which has four CPU cores, 10 GB of memory, and 50 GB of disk space. For more information, see **Solution 2: Deploy OceanBase Database in a cluster**.
+   You can choose this solution if you want to learn more about the distributed architecture and features of OceanBase Database. The cluster provides distributed capabilities and high availability apart from complete database features. To use this solution, you must have three hosts, each of which has four CPU cores, 10 GB of memory, and 50 GB of disk space. For more information, see the **Solution 2: Deploy OceanBase Database in a cluster** section below.
 
 * Solution 3: Deploy OceanBase Database in a container (applicable only to the community edition)
 
-   If you are using a non-Linux OS, such as Windows or macOS, and want to deploy and manage OceanBase Database in a container, you can choose this solution. This solution has not been verified by large-scale practices and therefore is not recommended. For more information, see **Solution 3: Deploy OceanBase Database in a container**.
+   If you are using a non-Linux OS, such as Windows or macOS, and want to deploy and manage OceanBase Database in a container, you can choose this solution. This solution has not been verified by large-scale practices and therefore is not recommended. For more information, see the **Solution 3: Deploy OceanBase Database in a container** section below.
 
 ## Prerequisites
 
@@ -40,7 +40,7 @@ Your software and hardware environments meet the following requirements.
 
 | Item               | Requirement                                                                                                                                                                                                                                                                                                                                                                                                                                          |
 |--------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| OS                 | <ul><li>AliOS 7.2 or later (Linux kernel 3.10.0 or later)</li><li>Red Hat Enterprise Linux Server 7.X (Linux kernel 3.10.0 or later)</li><li>CentOS Linux 7.X or later (Linux kernel 3.10.0 or later)</li><li>KylinOS V10</li><li>Anolis OS 8.6 or later</li><li>Unity Operating System (UOS) 1020a/1021a/1021e/1001c</li><li>NFSChina V4.0 or later</li><li>Inspur KOS V5.8</li><li>BCLinux BigCloud Enterprise Linux For Euler 21.10 LTS</li></ul> |
+| OS                 | <ul><li>Anolis OS 8.X (Linux kernel 3.10.0 or later)</li><li>Red Hat Enterprise Linux Server 7.X (Linux kernel 3.10.0 or later)</li><li>CentOS Linux 7.X or later (Linux kernel 3.10.0 or later)</li><li>KylinOS V10</li><li>Anolis OS 8.6 or later</li><li>Unity Operating System (UOS) 1020a/1021a/1021e/1001c</li><li>NFSChina V4.0 or later</li><li>Inspur KOS V5.8</li><li>BCLinux BigCloud Enterprise Linux For Euler 21.10 LTS</li></ul> |
 | CPU                | At least two cores or preferably four cores or more                                                                                                                                                                                                                                                                                                                                                                                                  |
 | Memory             | At least 8 GB or preferably 16 GB or more                                                                                                                                                                                                                                                                                                                                                                                                            |
 | Disk type          | SSD (recommended)                                                                                                                                                                                                                                                                                                                                                                                                                                    |
@@ -62,9 +62,9 @@ If you have only one server available, you can run the `obd demo` command to qui
 
 1. Download the all-in-one package and upload it to any directory on your server.
 
-   * For OceanBase Database Enterprise Edition, contact Technical Support to obtain the all-in-one package.
+   * For OceanBase Database Enterprise Edition, contact the Technical Support to obtain the all-in-one package.
 
-   * For OceanBase Database Community Edition, download the latest all-in-one package from [OceanBase Download Center](https://www.oceanbase.com/softwarecenter).
+   * For OceanBase Database Community Edition, download the latest all-in-one package from [OceanBase Download Center](https://en.oceanbase.com/softwarecenter).
 
 2. In the directory where the package is located, run the following commands to decompress and install the package:
 
@@ -91,14 +91,14 @@ If you have only one server available, you can run the `obd demo` command to qui
       [admin@test001 ~]$ obd demo
       ```
 
-   By default, the `obd demo` command deploys the OceanBase database and its components (which are ODP, OBAgent, Grafana, and Prometheus) with minimum specifications and then starts them in the home directory of the current user. The name of the deployed cluster is fixed to `demo` in OBD. For more information about custom deployment, see [Quick deployment command](https://www.oceanbase.com/docs/community-obd-cn-10000000001690698).
+   By default, the `obd demo` command deploys the OceanBase database and its components (which are ODP, OBAgent, Grafana, and Prometheus) with minimum specifications and then starts them in the home directory of the current user. The name of the deployed cluster is fixed to `demo` in OBD. For more information about custom deployment, see [Quick deployment command](https://en.oceanbase.com/docs/community-obd-en-10000000000860052).
 
-   You can use OBD commands to manage the OceanBase database. For more information about the commands, see [Cluster commands](https://www.oceanbase.com/docs/community-obd-cn-10000000001690699).
+   You can use OBD commands to manage the OceanBase database. For more information about the commands, see [Cluster commands](https://en.oceanbase.com/docs/community-obd-en-10000000000862273).
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
       <h4>Note</h4>
       <p>If you install Grafana or Prometheus, its access address is returned in the command output. On Alibaba Cloud or other cloud environments, the command may fail to obtain a public IP address but return a private IP address. You must use a correct public IP address. </p>
-</main>
+   </main>
 
 2. Connect to the OceanBase database from OBClient.
 
@@ -118,18 +118,18 @@ If you have only one server available, you can run the `obd demo` command to qui
 
 If you have multiple servers available, you can run the `obd web` command to start the GUI of OBD and deploy a distributed OceanBase cluster on the GUI.
 
-<main id="notice" type='explain'>
+<!-- <main id="notice" type='explain'>
   <h4>Note</h4>
   <p> This section describes only simple operations needed to quickly deploy a distributed OceanBase cluster. For more information, see <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000001690695">Deploy an OceanBase cluster on the GUI</a> in OBD Documentation. </p>
-</main>
+</main> -->
 
 ### Step 1: Download and install the all-in-one package
 
 1. Download the all-in-one package and upload it to any directory on your server.
 
-   * For OceanBase Database Enterprise Edition, contact Technical Support to obtain the all-in-one package.
+   * For OceanBase Database Enterprise Edition, contact the Technical Support to obtain the all-in-one package.
 
-   * For OceanBase Database Community Edition, download the latest all-in-one package from [OceanBase Download Center](https://www.oceanbase.com/softwarecenter).
+   * For OceanBase Database Community Edition, download the latest all-in-one package from [OceanBase Download Center](https://en.oceanbase.com/softwarecenter).
 
 2. In the directory where the package is located, run the following commands to decompress and install the package:
 
@@ -164,23 +164,23 @@ If you have multiple servers available, you can run the `obd web` command to sta
 
 2. On the **Deployment Configuration** page, modify **Cluster Name** and **Deployment Type**. You can also retain the default values. Click **Next** to go to the **Node Configuration** page.
 
-<img width="819.6" height="490.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-01.png" alt="Deployment configuration">
+<!-- <img width="819.6" height="490.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-01.png" alt="Deployment configuration"> -->
 
 3. On the **Node Configuration** page, enter server IP addresses and the password and then click **Next** to go to the **Cluster Configuration** page.
 
-<img width="868.8" height="523.2" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-02.png" alt="Node configuration">
+<!-- <img width="868.8" height="523.2" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-02.png" alt="Node configuration"> -->
 
 4. On the **Cluster Configuration** page, specify the deployment mode, password, directory, port, and other information about the cluster. You can also retain the default values. Click **Next** to go to the **Pre-check** page.
 
-<img width="788.4" height="549" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-03.png" alt="Cluster configuration">
+<!-- <img width="788.4" height="549" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-03.png" alt="Cluster configuration"> -->
 
 5. On the **Pre-check** page, verify the configuration information and then click **Pre-check**. If an error code is returned, you can click **Auto repair** to automatically repair the error, or click **Learn more** to repair the error by referring to the error code document. After all the errors are repaired, click **Re-check** to perform a pre-check again.
 
-<img width="781.2" height="405.6" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-04.png" alt="Pre-check">
+<!-- <img width="781.2" height="405.6" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-04.png" alt="Pre-check"> -->
 
 6. After the pre-check is passed, click **Deploy** to start the deployment. If the deployment is successful, the connection strings of the components are displayed. You can copy a connection string to access the corresponding component.
 
-<img width="898.8" height="523.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-07.png" alt="Deployment">
+<!-- <img width="898.8" height="523.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-07.png" alt="Deployment"> -->
 
 7. Click **Complete**.
 
