--- a/en-US/4.deploy/1.deploy-overview.md
+++ b/en-US/4.deploy/1.deploy-overview.md
@@ -4,7 +4,7 @@ OceanBase Database is a native distributed relational database available in two 
 
 * The Community Edition is open source, fully compatible with MySQL databases, and provides services only for MySQL tenants.
 
-* The Enterprise Edition is an upgrade of the Community Edition, with advanced features such as advanced compatibility modes, GUI tools, auditing, encryption, high availability, and scalability. It is highly compatible with both Oracle and MySQL databases and provides services for both types of tenants.
+* The Enterprise Edition is an upgrade of the Community Edition, with additional features such as advanced compatibility modes, GUI tools, auditing, encryption, high availability, and scalability. It is highly compatible with both Oracle and MySQL databases and provides services for both types of tenants.
 
 This document provides information on how to deploy OceanBase Database editions, as well as OceanBase Cloud Platform (OCP), OceanBase Database Proxy (ODP), OceanBase Migration Service (OMS), and OceanBase Developer Center (ODC).
 
@@ -12,7 +12,7 @@ This document provides information on how to deploy OceanBase Database editions,
 
 * **OceanBase Database Enterprise Edition**: This Edition allows you to deploy an OceanBase cluster by using OCP or CLI.
 
-* **OceanBase Database Community Edition**: This Edition allows you to deploy an OceanBase cluster in a Kubernetes cluster or by using OBD or a Docker image.
+* **OceanBase Database Community Edition**: This Edition allows you to deploy an OceanBase cluster in a Kubernetes cluster or by using OBD, OCP, or a Docker image.
 
 ## Deployment scenarios
 
@@ -20,13 +20,13 @@ This document provides information on how to deploy OceanBase Database editions,
 
 * In production environments, we recommend that you deploy an OceanBase cluster by using OCP. For more information, see [Create an OceanBase cluster](3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md).
 
-* In non-production environments where OCP is not installed, you can deploy an OceanBase cluster by using CLI. For more information, see [Get started with OceanBase Database Enterprise Edition](../2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md).
+* In non-production environments where OCP is not installed, you can deploy an OceanBase cluster by using CLI. For more information, see [Get started with OceanBase Database](../2.quickstart/1.quickly-experience-oceanbase-for-community.md).
 
 **OceanBase Database Community Edition**
 
-* For operating systems such as macOS and Windows that are not natively supported, we recommend that you deploy an OceanBase cluster by using a Docker image. For more information, see [Use Docker to deploy OceanBase Database](../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md).
+* To deploy an OceanBase cluster on operating systems such as macOS and Windows, which are not natively supported, we recommend that you use a Docker image. For more information, see **Solution 3: Deploy OceanBase Database in a container** in [Get started with OceanBase Database](../2.quickstart/1.quickly-experience-oceanbase-for-community.md).
 
-* For natively supported operating systems such as Linux, we recommend that you deploy an OceanBase cluster by using OBD. For more information about supported operating systems, see the list of supported operating systems. For more information, see [Use OBD Demo to deploy OceanBase Database](../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md).
+* For natively supported operating systems such as Linux, we recommend that you deploy an OceanBase cluster by using OBD. For more information about supported operating systems, see the list of supported operating systems. For more information, see **Solution 1: Deploy OceanBase Database in a demo environment** in [Get started with OceanBase Database](../2.quickstart/1.quickly-experience-oceanbase-for-community.md).
 
 <!-- * In an offline environment, we recommend that you use OBD for standard deployment. For more information, see [Deploy OceanBase Database in a production environment](5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md). -->
 
