--- a/en-US/4.deploy/2.introduction-to-oceanbase-cluster-deployment-scheme.md
+++ b/en-US/4.deploy/2.introduction-to-oceanbase-cluster-deployment-scheme.md
@@ -10,7 +10,7 @@ OceanBase Database uses a shared-nothing architecture with multiple replicas to 
 
 **Characteristics**
 
-* Three IDCs in the same city form a cluster with three replicas. Each IDC is a zone, with network latency ranging from 0.5ms to 2ms.
+* Three IDCs in the same region form a cluster with three replicas. Each IDC is a zone, with network latency ranging from 0.5ms to 2ms.
 * If an IDC fails, the remaining two replicas are still in the majority. They can enable redo log synchronization and guarantee a recovery point objective (RPO) of zero.
 * This deployment solution cannot cope with city-wide disasters.
 
@@ -22,10 +22,10 @@ OceanBase Database uses a shared-nothing architecture with multiple replicas to 
 
 **Characteristics**
 
-* Five IDCs across three cities form a cluster with five replicas.
+* Five IDCs across three regions form a cluster with five replicas.
 * In the case of an IDC or city-wide failure, the remaining replicas are still in the majority and can guarantee an RPO of zero.
-* The majority must contain at least three replicas. However, each city has at most two replicas. To reduce the latency for synchronizing redo logs, City 1 and City 2 must be close to each other.
-* To reduce costs, you can deploy only log replicas in City 3.
+* The majority must contain at least three replicas. However, each city has at most two replicas. To reduce the latency for synchronizing redo logs, Region1 and Region2 must be close to each other.
+* To reduce costs, you can deploy only log replicas in Region3.
 
 **Deployment solution**
 
