--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -2,7 +2,7 @@
 
 This topic describes how to configure your servers.
 
-## Step 1. Check your operating system
+## Step 1: Check your operating system
 
 The following table lists the Linux operating systems that support OceanBase Database.
 
@@ -14,14 +14,16 @@ The following table lists the Linux operating systems that support OceanBase Dat
 | Unity Operating System (UOS) | V20 | x86_64 (including Hygon) or AArch64 (such as Kunpeng and Phytium) |
 | NFSChina | V4.0 and later | x86_64 (including Hygon) or AArch64 (such as Kunpeng and Phytium) |
 | Inspur KOS | V5.8 | x86_64 (including Hygon) or AArch64 (such as Kunpeng and Phytium) |
-| CentOS/Red Hat Enterprise Linux | V7.2 and later <blockquote><b>Note</b></br> CentOS V8.x is not supported. </blockquote> | x86_64 (including Hygon) or AArch64 (such as Kunpeng and Phytium) |
+| CentOS/Red Hat Enterprise Linux | V7.2 and later <blockquote><b>Note</b></br> CentOS V8.X is not supported. </blockquote> | x86_64 (including Hygon) or AArch64 (such as Kunpeng and Phytium) |
+| SUSE Enterprise Linux Server    | 12 SP3 and later | x86_64 (including Hygon) or AArch64 (only Kunpeng and Phytium are supported) |
+| Debian              | V8.3 and later  | x86_64 (including Hygon) or AArch64 (only Kunpeng and Phytium are supported) |
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>Before you use an operating system, configure the network and install a package manager such as YUM or Zypper first. </p>
   </main>
 
-## Step 2. Set BIOS
+## Step 2: Set BIOS
 
 Complete the following BIOS settings according to the operating system you selected.
 
@@ -81,7 +83,7 @@ Complete the following BIOS settings according to the operating system you selec
     <p>The method for modifying BIOS settings varies depending on servers. Refer to your server's operation manual for specific steps. </p>
   </main>
 
-## Step 3. Mount disks
+## Step 3: Mount disks
 
 Mount your disks according to the following requirements.
 
@@ -111,10 +113,10 @@ Mount your disks according to the following requirements.
   <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>We recommend that you allocate at least 50 GB for a root directory and do not separately mount the /opt and /var directories. If you use Logical Volume Manager (LVM), we recommend that you specify the stripe parameters during the creation of directories. Example:</p>
-    <p><code></code><code>shell lvcreate -n data -L 3000G obvg --stripes=3 --stripesize=128 &lt;code>&lt;/code></code></p>
+    <p><code></code><code>shell lvcreate -n data -L 3000G obvg --stripes=3 --stripesize=128 &lt;code&gt;&lt;/code&gt;</code></p>
   </main>
 
-## Step 4. Configure your NICs
+## Step 4: Configure your NICs
 
 We recommend that you configure two 10 Gbit/s NICs for optimal performance.
 
@@ -122,6 +124,6 @@ We recommend that you configure two 10 Gbit/s NICs for optimal performance.
 * We recommend that you name the NICs as eth0 and eth1.
 * We recommend that you use the network service instead of NetworkManager.
 
-## Step 5. Check your software
+## Step 5: Check your software
 
 Install Docker on the servers where OceanBase Admin Toolkit (OAT), OceanBase Developer Center (ODC), and OMS are deployed. The minimum version requirement for Docker is CE 17.03 or later.
