410：SQL Basic Operations Query Optimization

--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/3.basic-sql-operations-of-oracle-mode.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/3.basic-sql-operations-of-oracle-mode.md
@@ -130,131 +130,19 @@ Query OK, 0 rows affected
 * 通过视图 `ALL_INDEXES` 查看表的所有索引。
 
   ```sql
-  obclient> SELECT * FROM ALL_INDEXES WHERE table_name='TEST'\G
+  obclient> SELECT OWNER,INDEX_NAME,INDEX_TYPE,TABLE_OWNER,TABLE_NAME FROM ALL_INDEXES WHERE table_name='TEST'\G
   *************************** 1. row ***************************
                     OWNER: SYS
               INDEX_NAME: TEST_OBPK_1664353339491130
               INDEX_TYPE: NORMAL
               TABLE_OWNER: SYS
               TABLE_NAME: TEST
-              TABLE_TYPE: TABLE
-              UNIQUENESS: UNIQUE
-              COMPRESSION: ENABLED
-            PREFIX_LENGTH: NULL
-          TABLESPACE_NAME: NULL
-                INI_TRANS: NULL
-                MAX_TRANS: NULL
-          INITIAL_EXTENT: NULL
-              NEXT_EXTENT: NULL
-              MIN_EXTENTS: NULL
-              MAX_EXTENTS: NULL
-            PCT_INCREASE: NULL
-            PCT_THRESHOLD: NULL
-          INCLUDE_COLUMN: NULL
-                FREELISTS: NULL
-          FREELIST_GROUPS: NULL
-                PCT_FREE: NULL
-                  LOGGING: NULL
-                  BLEVEL: NULL
-              LEAF_BLOCKS: NULL
-            DISTINCT_KEYS: NULL
-  AVG_LEAF_BLOCKS_PER_KEY: NULL
-  AVG_DATA_BLOCKS_PER_KEY: NULL
-        CLUSTERING_FACTOR: NULL
-                  STATUS: VALID
-                NUM_ROWS: NULL
-              SAMPLE_SIZE: NULL
-            LAST_ANALYZED: NULL
-                  DEGREE: 1
-                INSTANCES: NULL
-              PARTITIONED: NO
-                TEMPORARY: NULL
-                GENERATED: NULL
-                SECONDARY: NULL
-              BUFFER_POOL: NULL
-              FLASH_CACHE: NULL
-        CELL_FLASH_CACHE: NULL
-              USER_STATS: NULL
-                DURATION: NULL
-        PCT_DIRECT_ACCESS: NULL
-              ITYP_OWNER: NULL
-                ITYP_NAME: NULL
-              PARAMETERS: NULL
-            GLOBAL_STATS: NULL
-            DOMIDX_STATUS: NULL
-          DOMIDX_OPSTATUS: NULL
-          FUNCIDX_STATUS: NULL
-              JOIN_INDEX: NO
-  IOT_REDUNDANT_PKEY_ELIM: NULL
-                  DROPPED: NO
-              VISIBILITY: VISIBLE
-        DOMIDX_MANAGEMENT: NULL
-          SEGMENT_CREATED: NULL
-        ORPHANED_ENTRIES: NULL
-                INDEXING: NULL
-                    AUTO: NULL
   *************************** 2. row ***************************
                     OWNER: SYS
               INDEX_NAME: TEST_INDEX
               INDEX_TYPE: NORMAL
               TABLE_OWNER: SYS
               TABLE_NAME: TEST
-              TABLE_TYPE: TABLE
-              UNIQUENESS: NONUNIQUE
-              COMPRESSION: ENABLED
-            PREFIX_LENGTH: NULL
-          TABLESPACE_NAME: NULL
-                INI_TRANS: NULL
-                MAX_TRANS: NULL
-          INITIAL_EXTENT: NULL
-              NEXT_EXTENT: NULL
-              MIN_EXTENTS: NULL
-              MAX_EXTENTS: NULL
-            PCT_INCREASE: NULL
-            PCT_THRESHOLD: NULL
-          INCLUDE_COLUMN: NULL
-                FREELISTS: NULL
-          FREELIST_GROUPS: NULL
-                PCT_FREE: NULL
-                  LOGGING: NULL
-                  BLEVEL: NULL
-              LEAF_BLOCKS: NULL
-            DISTINCT_KEYS: NULL
-  AVG_LEAF_BLOCKS_PER_KEY: NULL
-  AVG_DATA_BLOCKS_PER_KEY: NULL
-        CLUSTERING_FACTOR: NULL
-                  STATUS: VALID
-                NUM_ROWS: NULL
-              SAMPLE_SIZE: NULL
-            LAST_ANALYZED: NULL
-                  DEGREE: 1
-                INSTANCES: NULL
-              PARTITIONED: NO
-                TEMPORARY: NULL
-                GENERATED: NULL
-                SECONDARY: NULL
-              BUFFER_POOL: NULL
-              FLASH_CACHE: NULL
-        CELL_FLASH_CACHE: NULL
-              USER_STATS: NULL
-                DURATION: NULL
-        PCT_DIRECT_ACCESS: NULL
-              ITYP_OWNER: NULL
-                ITYP_NAME: NULL
-              PARAMETERS: NULL
-            GLOBAL_STATS: NULL
-            DOMIDX_STATUS: NULL
-          DOMIDX_OPSTATUS: NULL
-          FUNCIDX_STATUS: NULL
-              JOIN_INDEX: NO
-  IOT_REDUNDANT_PKEY_ELIM: NULL
-                  DROPPED: NO
-              VISIBILITY: VISIBLE
-        DOMIDX_MANAGEMENT: NULL
-          SEGMENT_CREATED: NULL
-        ORPHANED_ENTRIES: NULL
-                INDEXING: NULL
-                    AUTO: NULL
   2 rows in set
   ```
 
