--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
@@ -15,7 +15,7 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>参数 <code>major_compact_trigger</code> 的增长依赖 MemTable 内存达到设定阈值而触发的转储，而手动执行的转储命令不会进行计数。因此，无论手动转储多少次，都不会记录到 <code>minor_compact_trigger</code>。例如，<code>major_compact_trigger</code> 的值为 <code>3</code> 时，手动执行 3 次 <code>ALTER SYSTEM MINOR FREEZE</code> 后，当 MemTable 内存使用达到阈值后，并不会触发合并，因为之前的手动转储不做计数。</p>
+    <p>参数 <code>major_compact_trigger</code> 的增长依赖 MemTable 内存达到设定阈值而触发的转储，而手动执行的转储命令不会进行计数。因此，无论手动转储多少次，都不会记录到 <code>major_compact_trigger</code>。例如，<code>major_compact_trigger</code> 的值为 <code>3</code> 时，手动执行 3 次 <code>ALTER SYSTEM MINOR FREEZE</code> 后，当 MemTable 内存使用达到阈值后，并不会触发合并，因为之前的手动转储不做计数。</p>
   </main>
 
 ## 通过 SQL 语句修改转储配置
