--- a/zh-CN/5.administrator-guide/6.basic-database-management/5.manage-data-storage/1.dump-management-1/5.modify-dump-configuration.md
+++ b/zh-CN/5.administrator-guide/6.basic-database-management/5.manage-data-storage/1.dump-management-1/5.modify-dump-configuration.md
@@ -15,7 +15,7 @@
 
 >**说明**
 >
->参数 `major_compact_trigger` 的增长依赖 MemTable 内存达到设定阈值而触发的转储，而手动执行的转储命令不会进行计数。因此，无论手动转储多少次，都不会记录到 `minor_compact_trigger`。例如，`major_compact_trigger` 的值为 `3` 时，手动执行 3 次 `ALTER SYSTEM MINOR FREEZE` 后，当 MemTable 内存使用达到阈值后，并不会触发合并，因为之前的手动转储不做计数。
+>参数 `major_compact_trigger` 的增长依赖 MemTable 内存达到设定阈值而触发的转储，而手动执行的转储命令不会进行计数。因此，无论手动转储多少次，都不会记录到 `major_compact_trigger`。例如，`major_compact_trigger` 的值为 `3` 时，手动执行 3 次 `ALTER SYSTEM MINOR FREEZE` 后，当 MemTable 内存使用达到阈值后，并不会触发合并，因为之前的手动转储不做计数。
 
 ## 通过 SQL 语句修改转储配置
 
