410：URL information supplement

--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
@@ -59,7 +59,7 @@ encoding = "utf8"
 import jaydebeapi
 
 def ob_test():   
-    url = 'jdbc:oceanbase://host:port'
+    url = 'jdbc:oceanbase://host:port/schema_name'
     user = 's**@oracle'
     password = '******'
     driver = 'com.alipay.oceanbase.jdbc.Driver'
@@ -94,7 +94,7 @@ ob_test()
 
 修改代码中的数据库连接参数。参考如下字段，对应的值，则取自步骤一获取的数据库连接串。
 
-* **url**：取自 `-h` 和 `-P` 参数，`jdbc:oceanbase://IP:port/?pool=false`。OceanBase 数据库连接 IP，通常是一个 ODP 地址，以及访问所用的端口号。
+* **url**：取自 `-h` 和 `-P` 参数，`jdbc:oceanbase://IP:port/schema_name?pool=false`，'schema_name' 为待连接的 Schema 库。OceanBase 数据库连接 IP，通常是一个 ODP 地址，以及访问所用的端口号。
 
 * **user**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 ODP 连接时需要填写。
 
